# truenas-utils

./: README.md  pyproject.toml  requirements.txt
truenas_utils/: __init__.py  client.py
trunas_utils/: __init__.py  client.py
