[project]
name = "truenas-utils"
version = "0.1.0"
description = "code to abstract working with truenas data platform api"
authors = [{name="Chris Barnett", email="Christopher.Barnett@tufts.edu"}]
dependencies = [
    "trunas_api_client@git+https://github.com/truenas/api_client.git",
    "pydantic>=2.9.1",
    "pytest>=8.3.1"
]
requires-python = ">= 3.6"

[build-system]
requires = [
    "setuptools >= 59.0",
]
build-backend = "setuptools.build_meta"